# Compiler

./: .gitmodules  CMakeLists.txt  HelloWorld.haxor  README.MD  main.cpp
Ast/: Ast.cpp  Ast.h  CMakeLists.txt
Castaway/: trashcan.cpp
CodeGen/: CMakeLists.txt  CodeGen.h
Compiler/: CMakeLists.txt  Compiler.cpp  Compiler.h
Lexer/: CMakeLists.txt  Lexer.cpp  Lexer.h  Syntax.cpp  Syntax.h
Parser/: CMakeLists.txt  Parser.cpp  Parser.h
TypeChecker/: CMakeLists.txt  TypeChecker.cpp  TypeChecker.h
